# ai-infra-train-infer

./: .gitignore  README.md  _plot_loss.py  pyproject.toml  requirements-windows.txt  requirements.txt
configs/: minimal_sft.yaml
configs/benchmark/: 8b_async_baseline.yaml  8b_async_pipeline.yaml  8b_c3po.yaml  8b_icepop.yaml  8b_swift_sync.yaml  ablation_async_pipeline.yaml  ablation_baseline.yaml  ablation_c3po.yaml  ablation_icepop.yaml  ablation_swift_sync.yaml  benchmark_dp1.yaml  benchmark_dp2.yaml  benchmark_dp4.yaml  benchmark_dp8.yaml  inference_benchmark.yaml  sft_benchmark.yaml
configs/inference/: standalone.yaml
configs/training/: colocate.yaml  disaggregated.yaml  inference.yaml  model.yaml  multi_gpu.yaml  pp_combo_ppdp.yaml  pp_combo_pptp.yaml  pp_combo_ppzero.yaml  pp_equiv_pp1.yaml  pp_equiv_pp2.yaml  pp_smoke_pp1.yaml  pp_smoke_pp2.yaml  pt.yaml  rl.yaml  sft.yaml
docs/: training_results_summary.md
scripts/: benchmark_all.py  benchmark_inference.py  prepare_data.py  profile_memory.py  run_bubble_test.sh  run_colocate.py  run_disaggregated.py  run_duibi_all.sh  run_inference.py  start_vllm_server.sh
src/: __init__.py
src/distributed/: __init__.py  comm.py  lora.py  parallel_context.py  stream_manager.py  (+6 more)
tests/: __init__.py  test_async_pipeline.py  test_c3po_plus.py  test_colocate_loop.py  test_grad_norm_3d.py  test_icepop.py  test_icepop_c3po_integration.py  test_inference_standalone.py  test_ipc_transfer.py  test_pipeline_parallel.py  test_pipeline_scheduler.py  test_swift_sync.py  test_tensor_parallel.py  test_zero_optim.py
总结/: 改动总结.md
(+94 files in other folders)
