[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-infra-train-infer"
version = "0.1.0"
description = "AI infrastructure training, inference, and RL framework prototype with Mini-Megatron, Mini-ZeRO, and vLLM-style orchestration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "vllm>=0.6.0",
    "ray>=2.9.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "pyyaml>=6.0",
    "xxhash>=3.4.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "tensorboard>=2.15.0",
    "flash-attn>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
